--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^1.7.1",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "zone.js": "0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.1.2",
+    "@angular/cli": "1.2.4",
     "@angular/compiler-cli": "^4.0.0",
     "@angular/language-service": "^4.0.0",
     "@types/jasmine": "2.5.45",
